--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,7 +7,7 @@
   min-height: 100vh;
 } */
 
-.description {
+/* .description {
   display: inherit;
   justify-content: inherit;
   align-items: inherit;
@@ -44,9 +44,9 @@
   grid-template-columns: repeat(4, minmax(25%, auto));
   max-width: 100%;
   width: var(--max-width);
-}
+} */
 
-.card {
+/* .card {
   padding: 1rem 1.2rem;
   border-radius: var(--border-radius);
   background: rgba(var(--card-rgb), 0);
@@ -70,9 +70,9 @@
   font-size: 0.9rem;
   line-height: 1.5;
   max-width: 30ch;
-}
+} */
 
-.center {
+/* .center {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -93,22 +93,22 @@
   width: 240px;
   height: 180px;
   z-index: -1;
-}
+} */
 
-.center::before,
+/* .center::before,
 .center::after {
   content: '';
   left: 50%;
   position: absolute;
   filter: blur(45px);
   transform: translateZ(0);
-}
-
+} */
+/* 
 .logo {
   position: relative;
-}
+} */
 /* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
+/* @media (hover: hover) and (pointer: fine) {
   .card:hover {
     background: rgba(var(--card-rgb), 0.1);
     border: 1px solid rgba(var(--card-border-rgb), 0.15);
@@ -123,9 +123,9 @@
   .card:hover span {
     transform: none;
   }
-}
+} */
 
-/* Mobile */
+/* Mobile
 @media (max-width: 700px) {
   .content {
     padding: 4rem;
@@ -144,9 +144,9 @@
 
   .card h2 {
     margin-bottom: 0.5rem;
-  }
+  } */
 
-  .center {
+  /* .center {
     padding: 8rem 0 6rem;
   }
 
@@ -169,9 +169,9 @@
     justify-content: center;
     position: fixed;
     width: 100%;
-  }
+  } */
 
-  .description p {
+  /* .description p {
     align-items: center;
     inset: 0 0 auto;
     padding: 2rem 1rem 1.4rem;
@@ -185,9 +185,9 @@
     );
     background-clip: padding-box;
     backdrop-filter: blur(24px);
-  }
+  } */
 
-  .description div {
+  /* .description div {
     align-items: flex-end;
     pointer-events: none;
     inset: auto 0 0;
@@ -199,10 +199,10 @@
       rgb(var(--background-end-rgb)) 40%
     );
     z-index: 1;
-  }
+  } */
 }
 
-/* Tablet and Smaller Desktop */
+/* Tablet and Smaller Desktop
 @media (min-width: 701px) and (max-width: 1120px) {
   .grid {
     grid-template-columns: repeat(2, 50%);
@@ -226,4 +226,4 @@
   to {
     transform: rotate(0deg);
   }
-}
+} */
