--- a/src/style/globals.scss
+++ b/src/style/globals.scss
@@ -31,14 +31,22 @@ ul {
   list-style: none;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 4rem 6rem 6rem;
-  width: min(100svw, 1180px);
+  width: 100svw;
   min-height: 100vh;
+
+  & > * {
+    margin: 0 auto;
+  }
 }
 
 
@@ -83,9 +91,19 @@ main {
 }
 
 .header {
-  width: 100%;
-  display: inline-flex;
-  justify-content: space-between;
+  width: 100svw;
+  display: flex;
+  padding: 40px;
+  
+  .header-inner {
+    display: inline-flex;
+    justify-content: space-between;
+
+    margin: 0 auto;
+    width: min(100%, 1200px);
+
+
+  }
   
   .logo-container {
     position: relative;
@@ -108,11 +126,6 @@ main {
 }
 
 .footer {
-  width: 100%;
-  .logo-container {
-    position: relative;
-    width: 100%;
-    height: fit-content;
-
-  }
+  width: min(100%, 1200px);
+  padding: 30px;
 }
