--- a/src/style/projects.scss
+++ b/src/style/projects.scss
@@ -4,14 +4,30 @@
   display: flex;
   flex-direction: column;
   margin: 50px 0;
+  width: 100%;
+  max-width: 1080px;
 
   .project-card {
     display: flex;
-    flex-direction: row;
     margin: 50px 0;
+    flex-direction: row;
+
+    @media(max-width: 960px) {
+      flex-direction: column;
+
+      .project-details {
+        width: 100%;
+      }
+
+      &:nth-child(even){
+        .project-image {
+          order: 1;
+        }
+      }
+    }
 
     .project-details {
-      width: 50%;
+      // width: 50%;
       display: flex;
       flex-direction: column;
       line-height: 2;
@@ -23,23 +39,37 @@
       }
     }
 
-    .project-image {
+    .project-image-wrapper {
       width: 50%;
       display: flex;
-      justify-content: center;
-      align-items: center;
+      padding: 50px;
+
+      @media (max-width: 960px) {
+        width: 100%;
+      }
 
       img {
-        width: 100%;
-        height: 100%;
+        margin: 0 auto;
+        max-width: 400px;
+        max-height: 400px;
+        width: auto;
+        height: auto;
         object-fit: contain;
       }
 
       
     }
+
     &:nth-child(even){
-      .project-image {
+      .project-image-wrapper {
         order: -1;
+      }
+
+      @media(max-width: 960px) {
+        .project-image-wrapper {
+          width: 100%;
+          order: 1;
+        }
       }
     }
   }
