--- a/src/style/globals.scss
+++ b/src/style/globals.scss
@@ -34,6 +34,13 @@ ul {
 a {
   color: inherit;
   text-decoration: none;
+  transition: all 0.2s ease-in-out;
+  border-bottom: 1px solid transparent;
+
+  &:hover {
+    color: colors.color(highlight);
+    border-bottom: 1px solid colors.color(highlight);
+  }
 }
 
 main {
