--- a/src/style/hero.scss
+++ b/src/style/hero.scss
@@ -2,29 +2,33 @@
 @use "globals";
 
 .highlight {
-    color: rgb(19, 120, 70); /* Change 'red' to the color you want */
-  }
+  color: rgb(19, 120, 70); /* Change 'red' to the color you want */
+}
+
+section.hero {
+  margin-top: 10px;
+}
 
 
 /* Animation for the title */
 .title {
-    animation: fadeInUp 1s ease-in-out;
+  animation: fadeInUp 1s ease-in-out;
+}
+
+/* Animation for the subtitle */
+.sub-title {
+  animation: fadeInUp 1s ease-in-out;
+}
+
+/* Keyframes for the fade-in animation */
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
   }
-  
-  /* Animation for the subtitle */
-  .sub-title {
-    animation: fadeInUp 1s ease-in-out;
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
-  
-  /* Keyframes for the fade-in animation */
-  @keyframes fadeInUp {
-    0% {
-      opacity: 0;
-      transform: translateY(20px);
-    }
-    100% {
-      opacity: 1;
-      transform: translateY(0);
-    }
-  }
+}
   
