--- a/src/style/projects.scss
+++ b/src/style/projects.scss
@@ -27,7 +27,6 @@
     }
 
     .project-details {
-      // width: 50%;
       display: flex;
       flex-direction: column;
       line-height: 2;
@@ -42,10 +41,14 @@
     .project-image-wrapper {
       width: 50%;
       display: flex;
-      padding: 50px;
+      padding: 20px;
 
       @media (max-width: 960px) {
         width: 100%;
+
+        img {
+          max-width: 100% !important;
+        }
       }
 
       img {
