--- a/src/style/globals.scss
+++ b/src/style/globals.scss
@@ -20,6 +20,12 @@ html, body {
   max-width: 100vw;
   overflow-x: hidden;
   scroll-behavior: smooth;
+
+  font-size: 16px;
+
+  @media screen and (max-width: 768px) {
+    font-size: 14px;
+  }
 }
 
 body {
@@ -74,7 +80,7 @@ main {
   gap: 1rem;
   width: min(100%, 1200px);
   // background: red;
-  padding: 50px;
+  padding: 2rem;
   padding-bottom: 80px;
 
   &:first-of-type {
