--- a/src/style/members.scss
+++ b/src/style/members.scss
@@ -2,7 +2,7 @@
 
 .members-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(min(40vw, 250px), 1fr));
   max-width: min(100vw, 1180px);
   width: auto;
   margin-top: 50px;
@@ -13,6 +13,7 @@
 
 .member-card {
   width: 250px;
+  max-width: 40vw;
   background: colors.color(light-background);
   color: colors.color(title);
   position: relative;
