--- a/src/style/members.scss
+++ b/src/style/members.scss
@@ -1,14 +1,47 @@
 @use "colors";
 
+.filters {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  padding: 10px 20px;
+  //border: 3px solid colors.color(light-background);
+
+  .filter-button {
+    background: transparent;
+    border: none;
+    color: colors.color(foreground);
+    font-size: 1.2rem;
+    font-weight: 600;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: all 0.4s ease-in-out;
+    border-bottom: 2px solid transparent;
+
+    &:hover {
+      background: colors.color(light-background);
+    }
+
+    &.active {
+      // background: colors.color(light-background);
+      border-bottom: 2px solid colors.color(highlight);
+    }
+  }
+}
+
 .members-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(min(40vw, 250px), 1fr));
+  grid-auto-rows: 1fr;  // force same height
   max-width: min(100vw, 1180px);
   width: auto;
   margin-top: 50px;
   gap: 20px;
   justify-items: left;
   align-items: center;
+  height: auto;
+  transition: height 0.2s ease-in-out;
+  align-items: start;
 }
 
 .member-card {
@@ -20,6 +53,7 @@
   padding: 40px 20px;
   display: flex;
   flex-direction: column;
+  height: 100%;
 
   .member-image {
     margin: 0 auto;
