--- a/src/style/hero.scss
+++ b/src/style/hero.scss
@@ -1,8 +1,36 @@
 @use "colors";
 @use "globals";
 
-.highlight {
-  color: rgb(19, 120, 70); /* Change 'red' to the color you want */
+.text-3d {
+  position: absolute;
+  top: 20%; 
+  right: 49%;
+  transform: translate(50%,-50%);
+  text-transform: uppercase;
+  font-family: verdana;
+  font-size: 2em;
+  font-weight: 700;
+  color: #f5f5f5;
+  text-shadow: 1px 1px 1px #919191,
+      1px 2px 1px #919191,
+      1px 3px 1px #919191,
+      1px 4px 1px #919191,
+      1px 5px 1px #919191,
+      1px 6px 1px #919191,
+      1px 7px 1px #919191,
+      1px 8px 1px #919191,
+      1px 9px 1px #919191,
+      1px 10px 1px #919191,
+  1px 18px 6px rgba(16,16,16,0.4),
+  1px 22px 10px rgba(16,16,16,0.2),
+  1px 25px 35px rgba(16,16,16,0.2),
+  1px 30px 60px rgba(16,16,16,0.4);
+}
+
+.text-3d .highlight {
+  color: #0b4e20; /* Highlight color */
+  transform: rotateX(120deg); /* Adjust the rotation angle as needed */
+  transform-origin: center; /* Adjust the rotation origin */
 }
 
 section.hero {
@@ -17,7 +45,7 @@ section.hero {
 
 /* Animation for the subtitle */
 .sub-title {
-  animation: fadeInUp 1s ease-in-out;
+  margin-top: 110px;
 }
 
 /* Keyframes for the fade-in animation */
