--- a/src/style/hero.scss
+++ b/src/style/hero.scss
@@ -2,13 +2,9 @@
 @use "globals";
 
 .text-3d {
-  position: absolute;
-  top: 20%; 
-  right: 49%;
-  transform: translate(50%,-50%);
   text-transform: uppercase;
-  font-family: verdana;
-  font-size: 2em;
+  //font-family: verdana;
+  font-size: clamp(1.2em, 5vw, 2em);
   font-weight: 700;
   color: #f5f5f5;
   text-shadow: 1px 1px 1px #919191,
@@ -21,10 +17,10 @@
       1px 8px 1px #919191,
       1px 9px 1px #919191,
       1px 10px 1px #919191,
-  1px 18px 6px rgba(16,16,16,0.4),
-  1px 22px 10px rgba(16,16,16,0.2),
-  1px 25px 35px rgba(16,16,16,0.2),
-  1px 30px 60px rgba(16,16,16,0.4);
+      1px 18px 6px rgba(16,16,16,0.4),
+      1px 22px 10px rgba(16,16,16,0.2),
+      1px 25px 35px rgba(16,16,16,0.2),
+      1px 30px 60px rgba(16,16,16,0.4);
 }
 
 .text-3d .highlight {
