--- a/src/style/globals.scss
+++ b/src/style/globals.scss
@@ -164,6 +164,7 @@ main {
       gap: 2rem;
     }
   }
+
 }
 
 .footer {
@@ -178,4 +179,17 @@ main {
   @media only screen and (max-width: 1080px) {
     height: 70px;
   }
+}
+
+.join-button {
+  color: colors.color(title);
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-weight: 600;
+  font-size: 1.2rem;
+  transition: all 0.2s ease-in-out;
+
+  // &:hover {
+  //   color: colors.color(highlight);
+  // }
 }
